--- a/Titov_c/Titov_c.vcxproj.filters
+++ b/Titov_c/Titov_c.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Titov_c.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="asio.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
